@@ -1,5 +1,10 @@
 2007-05-29  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
 
+	* [w3m-dev 04260] Warning (Re: road to 0.5.2)
+	* main.c, display.c: delete unused macros, change void to static void.
+
+2007-05-29  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
+
 	* [w3m-dev 04259] long long (Re: road to 0.5.2)
 	* Makefile.in, aclocal.m4: move 'gc' from $LIBS to $LIBGC.
 	* configure: regenerated.
